# SLProject4

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app_demo/: Benchmarks.ods  CMakeLists.txt
apps/app_demo/source/: AppDemoGui.cpp  AppDemoGui.h  AppDemoMain.cpp  AppDemoSceneID.h  AppDemoSceneView.cpp  AppDemoSceneView.h  AppDemoVideo.cpp
apps/app_demo/source/scenes/: AppDemoScene2Dand3DText.cpp  AppDemoScene2Dand3DText.h  AppDemoSceneAnimNode.cpp  AppDemoSceneAnimNode.h  AppDemoSceneAnimNodeMass.cpp  AppDemoSceneAnimNodeMass.h  AppDemoSceneAnimNodeMass2.cpp  AppDemoSceneAnimNodeMass2.h  AppDemoSceneAnimSkinned.cpp  AppDemoSceneAnimSkinned.h  AppDemoSceneAnimSkinnedMass.cpp  AppDemoSceneAnimSkinnedMass.h  AppDemoSceneAnimSkinnedMass2.cpp  AppDemoSceneAnimSkinnedMass2.h  AppDemoSceneEmpty.cpp  AppDemoSceneEmpty.h  AppDemoSceneErlebARAugustaTmpTht.cpp  AppDemoSceneErlebARAugustaTmpTht.h  AppDemoSceneErlebARAventicumAmphitheater.cpp  AppDemoSceneErlebARAventicumAmphitheater.h  AppDemoSceneErlebARAventicumCigognier.cpp  AppDemoSceneErlebARAventicumCigognier.h  AppDemoSceneErlebARAventicumTheater.cpp  AppDemoSceneErlebARAventicumTheater.h  AppDemoSceneErlebARBernChristoffel.cpp  AppDemoSceneErlebARBernChristoffel.h  AppDemoSceneErlebARBielBFH.cpp  AppDemoSceneErlebARBielBFH.h  AppDemoSceneErlebARBielCBB.cpp  AppDemoSceneErlebARBielCBB.h  AppDemoSceneErlebARChristoffel.cpp  AppDemoSceneErlebARChristoffel.h  AppDemoSceneErlebARSutz.cpp  AppDemoSceneErlebARSutz.h  AppDemoSceneFigure.cpp  AppDemoSceneFigure.h  AppDemoSceneFrustum.cpp  AppDemoSceneFrustum.h  AppDemoSceneGLTF.cpp  AppDemoSceneGLTF.h  (+96 more)
apps/app_demo_imgui/: CMakeLists.txt
apps/app_demo_minimal/: AppMinimal.cpp  CMakeLists.txt
apps/app_demo_node/: AppNodeGui.cpp  AppNodeGui.h  AppNodeMain.cpp  AppNodeScene.cpp  AppNodeScene.h  AppNodeSceneView.cpp  AppNodeSceneView.h  CMakeLists.txt
apps/app_demo_node/glfw/: AppNodeMainGLFW.cpp  CMakeLists.txt
apps/app_demo_node/source/: AppNodeLoad.cpp  AppNodeScene.cpp  AppNodeScene.h  AppNodeSceneView.cpp
apps/app_demo_slproject/: CMakeLists.txt
apps/app_demo_slproject/android/: README.md  build.gradle  gradle.properties  slproject-release-key
apps/app_demo_slproject/emscripten/: AppDemoMainEmscripten.cpp  CMakeLists.txt  index.html
apps/app_demo_slproject/glfw/: AppDemoMainGLFW.cpp  CMakeLists.txt
apps/app_demo_slproject/include/: AppDemoSceneEmpty.h  AppDemoSceneLegacy.h  AppDemoSceneMinimal.h  AppDemoSceneSuzanne.h
apps/app_demo_slproject/ios/: CMakeLists.txt  ViewController.mm  plist.in
apps/app_demo_slproject/source/: AppDemoGui.cpp  AppDemoGui.h  AppDemoLoad.cpp  AppDemoMain.cpp  AppDemoScene2Dand3DText.cpp  AppDemoScene2Dand3DText.h  AppDemoSceneAnimationNode.cpp  AppDemoSceneAnimationNode.h  AppDemoSceneAnimationNodeMass.h  AppDemoSceneAnimationNodeMass2.cpp  AppDemoSceneAnimationSkinnedMass.cpp  AppDemoSceneAnimationSkinnedMass.h  AppDemoSceneEmpty.cpp  AppDemoSceneFigure.cpp  AppDemoSceneFigure.h  AppDemoSceneFrustum.cpp  AppDemoSceneFrustum.h  AppDemoSceneGLTF.cpp  AppDemoSceneJansUniverse.cpp  AppDemoSceneLegacy.cpp  AppDemoSceneLegacy.h  AppDemoSceneLevelOfDetail.cpp  AppDemoSceneMeshLoad.cpp  AppDemoSceneMeshLoad.h  AppDemoSceneMinimal.cpp  AppDemoSceneMinimal.h  AppDemoSceneParticleComplexFire.cpp  AppDemoSceneParticleComplexFire.h  AppDemoSceneParticleDustStorm.cpp  AppDemoSceneParticleFountain.cpp  AppDemoSceneParticleMany.cpp  AppDemoSceneParticleRingOfFire.cpp  AppDemoSceneParticleSimple.cpp  AppDemoSceneParticleSun.cpp  AppDemoScenePointClouds.h  AppDemoSceneRTDoF.cpp  AppDemoSceneRTLens.cpp  AppDemoSceneRTLens.h  AppDemoSceneRTMuttenzerBox.cpp  AppDemoSceneRTSpheres.cpp  (+52 more)
apps/app_demo_webgpu/: AppDemoWebGPU.cpp  CMakeLists.txt  README.md  metal_layer.mm
apps/app_imgui/: CMakeLists.txt
apps/app_minimal/: AppMinimalMain.cpp  CMakeLists.txt
apps/app_node/: AppNodeGui.cpp  AppNodeGui.h  AppNodeMain.cpp  AppNodeScene.cpp  AppNodeScene.h  AppNodeSceneView.cpp  CMakeLists.txt
apps/app_webgpu/: CMakeLists.txt
apps/exercises/: glUtils.cpp  glUtils.h
apps/exercises/Geom/: Geom.cpp
apps/exercises/ParticleGenerator/: ParticleGenerator.cpp
apps/exercises/ch00_new_cpp_features/: ch00_NewCppFeatures.cpp
apps/exercises/ch04_HelloCube_Java/: SLMat3f.java
apps/exercises/ch04_HelloCube_Net/: SLMat3f.cs  SLMat4f.cs  SLUtils.cs  SLVec4f.cs  ch04_HelloCube_Net.csproj
apps/exercises/ch06_ColorCube/: ColorCube.cpp
apps/exercises/ch07_DiffuseCube/: DiffuseCube.cpp
apps/exercises/ch07_DiffuseSphere/: DiffuseSphere.cpp
apps/exercises/ch08_BlinnPhongLighting/: BlinnPhongLighting.cpp
apps/exercises/ch09_TextureMapping/: TextureMapping.cpp
apps/exercises/ch09_TextureMapping_Net/: SLMat4f.cs  SLVec3f.cs  TextureMapping_Net.cs  glUtils.cs
apps/exercises/ch09_TextureMapping_WebGL/: ADSTex.frag  ADSTex.vert  TextureMapping.WebGL.html  glUtils.js  webgl-debug.js  webgl-utils.js
apps/exercises/cv01_ChangeBrightnessAndContrast/: cv01_ChangeBrightnessAndContrast.cpp
apps/exercises/cv02_CalderonFilter/: cv02_CalderonFilter.cpp
apps/exercises/cv06_WarpTriangle/: cv06_WarpTriangle.cpp
apps/exercises/cv07_MeshWarping/: cv07_MeshWarping.cpp
apps/exercises/cv08_MeshMorphing/: cv08_MeshMorphing.cpp
apps/exercises/cv13_FaceTracking/: cv13_FaceTracking.cpp
apps/exercises/cv13_FacialLandmarkDetection/: cv13_FacialLandmarkDetection.cpp
apps/exercises/cv13_HeadPoseEstimation/: cv13_HeadPoseEstimation.cpp
apps/exercises/cv13_Snapchat2D/: cv13_Snapchat2D.cpp
apps/exercises/cv15_YoloV3/: cv15_YoloV3.cpp
apps/source/: App.h  AppCommon.cpp  AppCommon.h  AppDemo.cpp  AppDemo.h  AppGLFW.cpp  AppLoad.cpp  AppLoad.h  AppScene.h  CVCapture.cpp  CVCapture.h  SLInterface.cpp  SLInterface.h  WebCamera.cpp  WebCamera.h
apps/source/sm/: Event.h  EventData.h  StateMachine.cpp  StateMachine.h
apps/source/wai/: FeatureExtractorFactory.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h  WAIAppTest.cpp  WAIAppTest.h  WAIMapStorage.h
apps/webgpu/: CMakeLists.txt  main.cpp  webgpu_demo.cpp
cmake/: CompileOptions.cmake  (+3 more)
(+627 files in other folders)
